@@ -124,6 +124,9 @@ Bug Fixes
 * SOLR-5645: A SolrCore reload via the CoreContainer will try and register in
   zk again with the new SolrCore. (Mark Miller)
 
+* SOLR-5636: SolrRequestParsers does some xpath lookups on every request, which
+  can cause concurrency issues. (Mark Miller)
+  
 Optimizations
 ----------------------  
 
